# Jokerd

jocker-server/: .gitignore  CMakeLists.txt  README.md  container_options.json  daemon.cpp  main.cpp
jocker-server/cgroup/: cgroup.cpp  cgroup.h  cgroup_manager.cpp  cgroup_manager.h  cgroup_options.cpp  cgroup_options.h
jocker-server/container/: children_functions.h  container.cpp  container.h  container_cluster.cpp  container_cluster.h  container_options.cpp  container_options.h
jocker-server/data/: namespaces-templates
jocker-server/docs/: Container options.md  Container.md  Daemon.md  General_overview.md
jocker-server/execution/: daemon.cpp  daemon.h  daemon_socket.cpp  daemon_socket.h  runtime.cpp  runtime.h
jocker-server/ns/: ns_group.cpp  ns_group.h  ns_options.cpp  ns_options.h  ns_pool.cpp  ns_pool.h
jocker-server/ns/ns_options/: ipc_ns_config.cpp  ipc_ns_config.h  mnt_ns_config.cpp  mnt_ns_config.h  net_ns_config.cpp  net_ns_config.h  ns_conf_repository.cpp  ns_conf_repository.h  ns_config.cpp  ns_config.h  ns_options.cpp  ns_options.h  pid_ns_config.cpp  pid_ns_config.h  time_ns_config.cpp  time_ns_config.h  user_ns_config.cpp  user_ns_config.h  uts_ns_config.cpp  uts_ns_config.h
jocker-server/ns/ns_types/: ipc_ns.cpp  ipc_ns.h  mnt_ns.cpp  mnt_ns.h  net_ns.cpp  net_ns.h  ns.cpp  ns.h  ns_type.h  pid_ns.cpp  pid_ns.h  time_ns.cpp  time_ns.h  user_ns.cpp  user_ns.h  uts_ns.cpp  uts_ns.h
jocker-server/other/: common.cpp  common.h  syscall_wrapper.h
jocker-server/parser/: parser.cpp  parser.h
